--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
 
-//create a page that will be rendered when the index is loaded
 
-<img src="f3cflat-design.jpg"
+
+<img src="https://ibb.co/Y2wjn23"
